--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.fondoLogin {
+    background-color: #6c5b7c;
+}
+
+.is-horizontal-center {
+    justify-content: center;
+}
